--- a/cfg/lemt/mmfi_hmpear_train.yml
+++ b/cfg/lemt/mmfi_hmpear_train.yml
@@ -9,11 +9,12 @@ epochs: &epochs 100
 # Dataset parameters
 # --------------------------------------
 train_dataset:
-  name: LiDARAssistedPseudoLabelingDataset
+  name: LiDARAndPseudoLabeledTrainingDataset
   params:
     data_path: &data_path data/mmfi.pkl
     split: [train_rdn_p3, val_rdn_p3]
     ratio: 0.1
+    data_path_pl: data/mmfi_pred.pkl
     data_path_ref: data/hmpear.pkl
     split_ref: [train, val]
 val_dataset:
@@ -48,7 +49,7 @@ sched_params:
 # --------------------------------------
 # Model parameters
 # --------------------------------------
-lemt_pl: True
+lemt_train: True
 model_name: P4Transformer
 model_params:
   radius: 0.7
@@ -72,7 +73,8 @@ loss_params:
   thres_static: 0.2
   thres_dynamic: 0.1
   thres_loss: 0.1
-unsup_weight: 1.0
+pl_weight: 0.1
+lidar_weight: 1.0
 # --------------------------------------
 # Augmentation parameters
 # --------------------------------------
@@ -193,17 +195,15 @@ test_pipeline: &test_pipeline
       max_len: 256
   - name: ToTensor
     params: null
-unsup_pipeline:
+pl_pipeline:
   - name: UniformSample
     params:
       pad_type: 'start'
-      clip_len: 8
+      clip_len: 7
       offset: 1
   - name: GetCentroid
     params: 
       centroid_type: 'kps'
-  - name: ToITOP
-    params: null
   - name: MultiFrameAggregate
     params:
       num_frames: 3
@@ -214,10 +214,31 @@ unsup_pipeline:
     params: 
       outlier_type: 'box'
       radius: 1.5
+  - name: AddNoisyPoints
+    params:
+      add_std: 1.0
+      num_added: 8
+      zero_centered: false
+  - name: RandomScale
+    params:
+      scale_min: 0.9
+      scale_max: 1.1
+    prob: 0.5
+  - name: RandomRotate
+    params:
+      deg: true
+      angle_min: -10
+      angle_max: 10
+    prob: 0.5
+  - name: RandomTranslate
+    params:
+      translate_range: 0.01
+    prob: 0.5
   - name: ReduceKeypointLen
     params:
-      only_one: false
-      indexs_to_keep: [-2, -1]
+      only_one: true
+      keep_type: 'end'
+      frame_to_reduce: 0
   - name: Pad
     params:
       max_len: 256
