--- a/cfg/lemt/mmfi_hmpear.yml
+++ b/cfg/lemt/mmfi_hmpear.yml
@@ -4,7 +4,7 @@ pretrained: False
 sync_batchnorm: False
 clip_grad: null
 precision: 16
-epochs: &epochs 100
+epochs: &epochs 200
 # --------------------------------------
 # Dataset parameters
 # --------------------------------------
@@ -41,10 +41,12 @@ optim_params:
 # --------------------------------------
 # Learning rate scheduler parameters
 # --------------------------------------
-sched_name: CosineAnnealingWarmRestarts
+sched_name: LinearWarmupCosineAnnealingLR
 sched_params:
-  T_0: 20
-  eta_min: 1.0e-06
+  warmup_epochs: 40
+  max_epochs: *epochs
+  warmup_start_lr: 0.00001
+  eta_min: 0.00001
 # --------------------------------------
 # Model parameters
 # --------------------------------------
@@ -69,11 +71,11 @@ model_params:
 # --------------------------------------
 loss_name: UnsupLoss
 loss_params:
-  thres_static: 0.15
+  thres_static: 0.2
   thres_dynamic: 0.05
   thres_loss: 0.1
 w_lidar: 1.0
-w_pseudo: 0.1
+w_pseudo: 1.0
 w_dynamic: 0.01
 w_static: 0.01
 # --------------------------------------
@@ -100,26 +102,6 @@ train_pipeline:
     params: 
       outlier_type: 'box'
       radius: 1.5
-  - name: AddNoisyPoints
-    params:
-      add_std: 1.0
-      num_added: 8
-      zero_centered: false
-  - name: RandomScale
-    params:
-      scale_min: 0.9
-      scale_max: 1.1
-    prob: 0.5
-  - name: RandomRotate
-    params:
-      deg: true
-      angle_min: -10
-      angle_max: 10
-    prob: 0.5
-  - name: RandomTranslate
-    params:
-      translate_range: 0.01
-    prob: 0.5
   - name: ReduceKeypointLen
     params:
       only_one: true
@@ -243,12 +225,6 @@ ref_pipeline:
     params: 
       outlier_type: 'box'
       radius: 1.5
-  - name: AddNoisyPoints
-    params:
-      add_std: 1.0
-      num_added: 32
-      zero_centered: false
-    prob: 0.5
   - name: FlowBasedPointFiltering
     params:
       max_dist_threshold: 0.1
