--- a/cfg/lemt/mmfi_hmpear_pl.yml
+++ b/cfg/lemt/mmfi_hmpear_pl.yml
@@ -4,7 +4,7 @@ pretrained: False
 sync_batchnorm: False
 clip_grad: null
 precision: 16
-epochs: &epochs 100
+epochs: &epochs 200
 # --------------------------------------
 # Dataset parameters
 # --------------------------------------
@@ -41,10 +41,12 @@ optim_params:
 # --------------------------------------
 # Learning rate scheduler parameters
 # --------------------------------------
-sched_name: CosineAnnealingWarmRestarts
+sched_name: LinearWarmupCosineAnnealingLR
 sched_params:
-  T_0: 20
-  eta_min: 1.0e-06
+  warmup_epochs: 40
+  max_epochs: *epochs
+  warmup_start_lr: 0.00001
+  eta_min: 0.00001
 # --------------------------------------
 # Model parameters
 # --------------------------------------
@@ -70,9 +72,9 @@ model_params:
 loss_name: UnsupLoss
 loss_params:
   thres_static: 0.2
-  thres_dynamic: 0.1
+  thres_dynamic: 0.05
   thres_loss: 0.1
-unsup_weight: 1.0
+unsup_weight: 0.01
 # --------------------------------------
 # Augmentation parameters
 # --------------------------------------
@@ -97,11 +99,6 @@ train_pipeline:
     params: 
       outlier_type: 'box'
       radius: 1.5
-  - name: AddNoisyPoints
-    params:
-      add_std: 1.0
-      num_added: 8
-      zero_centered: false
   - name: RandomScale
     params:
       scale_min: 0.9
@@ -240,12 +237,6 @@ ref_pipeline:
     params: 
       outlier_type: 'box'
       radius: 1.5
-  - name: AddNoisyPoints
-    params:
-      add_std: 1.0
-      num_added: 32
-      zero_centered: false
-    prob: 0.5
   - name: FlowBasedPointFiltering
     params:
       max_dist_threshold: 0.1
