--- a/cfg/lemt/mmfi_hmpear.yml
+++ b/cfg/lemt/mmfi_hmpear.yml
@@ -19,8 +19,8 @@ train_dataset:
 val_dataset:
   name: BaseDataset
   params:
-    data_path: *data_path
-    split: test_rdn_p3
+    data_path: data/hmpear.pkl
+    split: test #_rdn_p3
 test_dataset:
   name: BaseDataset
   params:
@@ -75,7 +75,7 @@ loss_params:
   thres_dynamic: 0.05
   thres_loss: 0.1
 w_lidar: 1.0
-w_pseudo: 1.0
+w_pseudo: 0.1
 w_dynamic: 0.01
 w_static: 0.01
 # --------------------------------------
@@ -85,23 +85,34 @@ train_pipeline:
   - name: UniformSample
     params: 
       pad_type: 'start'
-      clip_len: 7
-      offset: 1
+      clip_len: 5
   - name: GetCentroid
     params: 
       centroid_type: 'kps'
   - name: Normalize
     params:
       feat_scale: null
-  - name: MultiFrameAggregate
-    params:
-      num_frames: 3
   - name: ToITOP
     params: null
   - name: RemoveOutliers
     params: 
       outlier_type: 'box'
       radius: 1.5
+  - name: RandomScale
+    params:
+      scale_min: 0.9
+      scale_max: 1.1
+    prob: 0.5
+  - name: RandomRotate
+    params:
+      deg: true
+      angle_min: -10
+      angle_max: 10
+    prob: 0.5
+  - name: RandomTranslate
+    params:
+      translate_range: 0.01
+    prob: 0.5
   - name: ReduceKeypointLen
     params:
       only_one: true
@@ -120,16 +131,12 @@ val_pipeline: &val_pipeline
   - name: UniformSample
     params:
       pad_type: 'start'
-      clip_len: 7
-      offset: 1
+      clip_len: 5
   - name: GetCentroid
     params: 
       centroid_type: 'kps'
   - name: ToITOP
     params: null
-  - name: MultiFrameAggregate
-    params:
-      num_frames: 3
   - name: Normalize
     params:
       feat_scale: null
@@ -137,6 +144,10 @@ val_pipeline: &val_pipeline
     params: 
       outlier_type: 'box'
       radius: 1.5
+  - name: FlowBasedPointFiltering
+    params:
+      max_dist_threshold: 0.1
+      min_dist_threshold: 0.02
   - name: ReduceKeypointLen
     params:
       only_one: true
@@ -151,16 +162,12 @@ test_pipeline: &test_pipeline
   - name: UniformSample
     params:
       pad_type: 'start'
-      clip_len: 7
-      offset: 1
+      clip_len: 5
   - name: GetCentroid
     params: 
       centroid_type: 'kps'
   - name: ToITOP
     params: null
-  - name: MultiFrameAggregate
-    params:
-      num_frames: 3
   - name: Normalize
     params:
       feat_scale: null
@@ -182,16 +189,12 @@ unsup_pipeline:
   - name: UniformSample
     params:
       pad_type: 'start'
-      clip_len: 8
-      offset: 1
+      clip_len: 6
   - name: GetCentroid
     params: 
       centroid_type: 'kps'
   - name: ToITOP
     params: null
-  - name: MultiFrameAggregate
-    params:
-      num_frames: 3
   - name: Normalize
     params:
       feat_scale: null
