--- a/cfg/lemt/mmfi_hmpear_train.yml
+++ b/cfg/lemt/mmfi_hmpear_train.yml
@@ -4,7 +4,7 @@ pretrained: False
 sync_batchnorm: False
 clip_grad: null
 precision: 16
-epochs: &epochs 100
+epochs: &epochs 200
 # --------------------------------------
 # Dataset parameters
 # --------------------------------------
@@ -42,10 +42,12 @@ optim_params:
 # --------------------------------------
 # Learning rate scheduler parameters
 # --------------------------------------
-sched_name: CosineAnnealingWarmRestarts
+sched_name: LinearWarmupCosineAnnealingLR
 sched_params:
-  T_0: 20
-  eta_min: 1.0e-06
+  warmup_epochs: 40
+  max_epochs: *epochs
+  warmup_start_lr: 0.00001
+  eta_min: 0.00001
 # --------------------------------------
 # Model parameters
 # --------------------------------------
@@ -99,11 +101,6 @@ train_pipeline:
     params: 
       outlier_type: 'box'
       radius: 1.5
-  - name: AddNoisyPoints
-    params:
-      add_std: 1.0
-      num_added: 8
-      zero_centered: false
   - name: RandomScale
     params:
       scale_min: 0.9
@@ -214,11 +211,6 @@ pl_pipeline:
     params: 
       outlier_type: 'box'
       radius: 1.5
-  - name: AddNoisyPoints
-    params:
-      add_std: 1.0
-      num_added: 8
-      zero_centered: false
   - name: RandomScale
     params:
       scale_min: 0.9
